--- a/src/styles/cardProductos.css
+++ b/src/styles/cardProductos.css
@@ -1,43 +1,35 @@
-/* Estilos para la tarjeta */
-.tarjeta {
+ /* Estilos para la tarjeta */
+.card-container{
+  margin: 0 auto;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.card-tarjeta {
     display: flex;
-    border: 1px solid #ccc;
+    flex-direction: column;
+    margin: 0 auto;
     border-radius: 4px;
     padding: 10px;
     margin-bottom: 10px;
+    width: 100%;
   }
   
-  .tarjeta-imagen {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
+  .card-tarjeta-imagen {
+    margin: 0 auto;
+    width: 10vw;
+    height: 100%;
     border-radius: 4px;
-    margin-right: 10px;
+
   }
-  
-  .tarjeta-contenido {
-    flex: 1;
-  }
-  
-  .tarjeta-titulo {
-    margin: 0;
-  }
-  
-  .tarjeta-descripcion {
-    margin: 0;
-    margin-bottom: 10px;
-  }
-  
-  .tarjeta-precio {
-    margin: 0;
-    font-weight: bold;
-  }
+
   
   .boton-agregar {
     background-color: #4caf50;
     color: white;
     border: none;
-    padding: 5px 10px;
+    padding: 5px 5px;
     border-radius: 4px;
     cursor: pointer;
   }
@@ -49,7 +41,7 @@
     background-color: #af4c4c;
     color: white;
     border: none;
-    padding: 5px 10px;
+    padding: 5px 5px;
     border-radius: 4px;
     cursor: pointer;
   }
@@ -64,4 +56,3 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  
