--- a/src/styles/cardProductos.css
+++ b/src/styles/cardProductos.css
@@ -4,8 +4,11 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 15px;
 }
-
+h2{
+  text-align: center;
+}
 .card-tarjeta {
     display: flex;
     flex-direction: column;
@@ -14,14 +17,21 @@
     padding: 10px;
     margin-bottom: 10px;
     width: 100%;
+    background-color: rgba(136, 149, 233, 0.683);
+    color: aliceblue;
   }
   
   .card-tarjeta-imagen {
     margin: 0 auto;
-    width: 10vw;
-    height: 100%;
+    width: 30vw;
+    height: 20vh;
     border-radius: 4px;
 
+  }
+  .card-tarjeta-contenido{
+    margin: 5px auto;
+    width: 90%;
+    height: 12vh;
   }
 
   
@@ -29,21 +39,25 @@
     background-color: #4caf50;
     color: white;
     border: none;
-    padding: 5px 5px;
+    padding: 10px 5px;
     border-radius: 4px;
     cursor: pointer;
+    margin: 0 auto;
+    width: 35vw;
   }
   
   .boton-agregar:hover {
     background-color: #45a049;
   }
   .boton-quitar {
+    margin: 0 auto;
     background-color: #af4c4c;
     color: white;
     border: none;
-    padding: 5px 5px;
+    padding: 10px 5px;
     border-radius: 4px;
     cursor: pointer;
+    width: 35vw;
   }
   
   .boton-quitar:hover {
@@ -55,4 +69,43 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+  }
+  @media(min-width: 720px){
+    .card-container{
+      margin: 0 auto;
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+    }
+    .card-tarjeta-imagen {
+      margin: 0 auto;
+      width: 20vw;
+      height: 30vh;
+      border-radius: 4px;
+  
+    }
+    .boton-agregar, .boton-quitar {
+
+      width: 18vw;
+    }
+
+  }
+  @media(min-width: 1000px){
+    .card-container{
+      margin: 0 auto;
+      width: 80%;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+    }
+     
+  .card-tarjeta-imagen {
+    margin: 0 auto;
+    width: 15vw;
+    height: 35vh;
+    border-radius: 4px;
+
+  }
+  .boton-agregar, .boton-quitar {
+    width: 10vw;
+  }
   }
