--- a/src/styles/cardProductos.css
+++ b/src/styles/cardProductos.css
@@ -1,13 +1,20 @@
 /* Estilos para la tarjeta */
+.productos-container {
+  background-color: rgb(0, 0, 0);
+}
+
 .card-container {
   margin: 0 auto;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 15px;
+  padding: 0 5px;
+  background-color: rgb(0, 0, 0);
 }
 h2 {
   text-align: center;
+  color: aliceblue;
 }
 .card-tarjeta {
   display: flex;
@@ -17,27 +24,33 @@ h2 {
   padding: 10px;
   margin-bottom: 10px;
   width: 100%;
-  background-color: rgba(136, 149, 233, 0.683);
+  height: 39vh;
+  background-color: rgba(39, 40, 43, 0.683);
   color: aliceblue;
 }
 
 .card-tarjeta-imagen {
   margin: 0 auto;
-  width: 30vw;
+  width: 38vw;
   height: 20vh;
   border-radius: 4px;
 }
 .card-tarjeta-contenido {
-  margin: 5px auto;
+  margin: 3px auto;
   width: 90%;
-  height: 12vh;
+  height: 10vh;
+}
+.card-imagen-titulo, .card-imagen-categoria, .imagen-precio{
+  padding: 0;
+  margin: 0;
+  line-height: 1.5;
 }
 
 .boton-agregar {
-  background-color: #4caf50;
+  background-color: #0b8e0f;
   color: white;
   border: none;
-  padding: 10px 5px;
+  padding: 8px 5px;
   border-radius: 4px;
   cursor: pointer;
   margin: 0 auto;
@@ -45,14 +58,14 @@ h2 {
 }
 
 .boton-agregar:hover {
-  background-color: #45a049;
+  background-color: #06960d;
 }
 .boton-quitar {
   margin: 0 auto;
   background-color: #af4c4c;
   color: white;
   border: none;
-  padding: 10px 5px;
+  padding: 8px 5px;
   border-radius: 4px;
   cursor: pointer;
   width: 35vw;
@@ -75,10 +88,13 @@ h2 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
+  .card-tarjeta {
+    height: 45vh;
+  }
   .card-tarjeta-imagen {
     margin: 0 auto;
     width: 20vw;
-    height: 30vh;
+    height: 25vh;
     border-radius: 4px;
   }
   .boton-agregar,
@@ -86,12 +102,15 @@ h2 {
     width: 18vw;
   }
 }
-@media (min-width: 1000px) {
+@media (min-width: 1300px) {
   .card-container {
     margin: 0 auto;
     width: 80%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+  }
+  .card-tarjeta {
+    height: 55vh;
   }
 
   .card-tarjeta-imagen {
@@ -99,6 +118,9 @@ h2 {
     width: 15vw;
     height: 35vh;
     border-radius: 4px;
+  }
+  .card-imagen-titulo, .card-imagen-categoria, .imagen-precio{
+    line-height: 1.8;
   }
   .boton-agregar,
   .boton-quitar {
