--- a/src/styles/carritoPage.css
+++ b/src/styles/carritoPage.css
@@ -1,5 +1,7 @@
 .carrito-container{
     padding: 10px;
+    background-color: black;
+    color: aliceblue;
 }
 
 .carrito-table{
@@ -11,17 +13,17 @@
     width: 80%;
 }
 .carrito-item{
-
     margin: 0 auto;
     width: 30%;
 }
 .boton-disminuir, .boton-aumentar {
-    background: transparent;
+    background-color: black;
+    color: aliceblue !important;
     border: none;
 }
 .boton-cantidad {
     border: none;
-    border-radius: 50%;
+    border-radius: 30%;
 }
 .boton-comprar{
     margin: 0 auto;
@@ -46,11 +48,6 @@
         margin: 0 auto;
         width: 100%;
     }
-    .carrito-item{
-    
-        margin: 0 auto;
-        width: 30%;
-    }
 }
 @media(min-width: 1020px){
     .carrito-table{
@@ -59,11 +56,7 @@
     }
     .carrito-table-header{
         margin: 0 auto;
-        width: 100%;
+        width: 80%;
     }
-    .carrito-item{
-    
-        margin: 0 auto;
-        width: 30%;
-    }
+
 }
