--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,6 +2,8 @@
     width: 100% !important;
     margin: 0 auto;
     background-color: rgb(4, 4, 4) !important;
+    position: fixed;
+    
 }
 .badge{
     padding-right: 165px;
@@ -20,7 +22,8 @@
 
 @media(min-width: 1000px){
    .navbar {
-    width: 80% !important;
+    width: 100% !important;
+    padding: 1rem 9rem;
    }
    .badge{
     padding-right: 0;
