--- a/src/styles/cardProductos.css
+++ b/src/styles/cardProductos.css
@@ -1,6 +1,7 @@
 /* Estilos para la tarjeta */
 .productos-container {
   background-color: rgb(0, 0, 0);
+  padding-top: 40px;
 }
 
 .card-container {
