--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,11 +1,27 @@
-.footer{
+/* Asegúrate de que el body y html tengan un alto mínimo del 100% */
+html, body {
+    height: 100%;
+    margin: 0; /* Elimina márgenes por defecto */
+}
+
+.footer {
     display: flex;
+    justify-content: center; /* Centra el contenido horizontalmente */
+    align-items: center; /* Centra el contenido verticalmente */
     width: 100%;
     background-color: rgb(19, 19, 19);
-    
-
+    position: fixed; /* Fija el footer en la parte inferior */
+    z-index: 2;
+    bottom: 0; /* Coloca el footer en la parte inferior */
 }
+
 .footer-text {
-    margin: 2rem auto;
+    margin: 1rem auto; /* Ajusta si es necesario */
     color: rgb(255, 255, 255);
+}
+
+/* Para asegurarte de que el contenido principal empuje el footer hacia abajo */
+.main-content {
+    min-height: calc(100vh - 60px); /* Ajusta '60px' a la altura real del footer */
+    padding-bottom: 100px; /* Agrega espacio en la parte inferior para que no se superponga con el footer */
 }
